fix: copy button overlap issue

--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -252,6 +252,9 @@ body .ddoc {
     .highlight .context_button {
       @apply border-none hover:bg-jsr-cyan-50;
     }
+    .highlight:has(.context_button) {
+      @apply pr-7;
+    }
 
     .highlight .lineNumbers {
       @apply border-jsr-gray-100 text-jsr-gray-300 pr-3;
